--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
+    // https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
+    implementation group: 'io.jsonwebtoken', name: 'jjwt', version: '0.2'
     api(
             'com.amazonaws:aws-lambda-java-core:1.2.1',
             'com.amazonaws:aws-lambda-java-log4j:1.0.1',
@@ -17,6 +19,7 @@ dependencies {
             'com.fasterxml.jackson.core:jackson-core:2.11.0',
             'com.fasterxml.jackson.core:jackson-databind:2.11.0',
             'com.fasterxml.jackson.core:jackson-annotations:2.11.0'
+
     )
 }
 
