--- a/serverless.yml
+++ b/serverless.yml
@@ -6,6 +6,8 @@ frameworkVersion: '2'
 provider:
   name: aws
   runtime: java8
+  httpApi:
+    cors: true
   iamRoleStatements:
     - Effect: Allow
       Action:
@@ -32,30 +34,37 @@ functions:
           path: /role
           method: post
 
+
   listRole:
     handler: com.serverless.handler.RoleHandler.ListRoleHandler
     events:
       - http:
           path: /role
           method: get
+
+
   createUser:
     handler: com.serverless.handler.UserHandler.CreateUserHandler
     events:
       - http:
           path: /user
           method: post
+
+
   listUser:
     handler: com.serverless.handler.UserHandler.ListUserHandler
     events:
       - http:
           path: /user
           method: get
+
   getUserByUsername:
     handler: com.serverless.handler.UserHandler.GetUserHandler
     events:
       - http:
           path: /user/{id}
           method: get
+
   loginUser:
     handler: com.serverless.handler.UserHandler.LoginUserHandler
     events:
